--- a/modules/ch1-intro/pages/s4-tasks-quiz-answers.adoc
+++ b/modules/ch1-intro/pages/s4-tasks-quiz-answers.adoc
@@ -4,8 +4,6 @@
 
 _Estimated reading time: *{time_estimate} minutes*._
 
-WARNING: Pending review.
-
 == Red Hat OpenStack Operations Tasks
 
 1. Which of the following tasks are more likely to be performed by an OpenStack Operator, as opposed to a Linux System Administrator?
@@ -19,7 +17,7 @@ _Correct: Server instances (VMs) and virtual networks are OpenStack API resource
 * [ ] Upgrading RHEL to a newer minor release inside a VM. +
 _Incorrect: Linux System Administrators are more likely to perform tasks inside a VM_
 
-* [x] *Configuring IP routing rules for a virtual networks.* +
+* [x] *Configuring IP routing rules for a virtual network.* +
 _Correct: Virtual networks and everything related to them are OpenStack API resources._
 
 * [ ] Configuring firewall rules inside a RHEL VM. +
@@ -33,7 +31,7 @@ _Correct: OpenStack Operators manage OpenStack resources which affect individual
 * [x] *Creating new virtual networks.* +
 _Correct: OpenStack Operators manage OpenStack resources which affect individual application workloads._
 
-* [ ] Creating a new class of virtual server, which provides virtual GPUs. +
+* [ ] Creating a new class of virtual servers, which provides virtual GPUs. +
 _Incorrect: OpenStack Administrators manage OpenStack resources which potentially affect an entire OpenStack cluster._
 
 * [ ] Configuring authentication to an OpenStack cluster using an LDAP server. +
@@ -53,7 +51,7 @@ _Incorrect: This task usually belongs to Network Administrators._
 * [ ] Configuring storage pools and logical disk units (LUNs) at the storage array to store data from OpenStack services. +
 _Incorrect: This task usually belongs to Storage Administrators._
 
-* [x] *Installing RPM packages and configure physical RHEL servers to be managed by OpenStack control planes.* +
+* [x] *Installing RPM packages and configuring physical RHEL servers to be managed by OpenStack control planes.* +
 _Correct: OpenStack Administrators could delegate this task to the Server Administration team, but they should be able to perform themselves, and will frequently demand to._
 
 * [x] *Installing OpenStack services on OpenShift clusters.* +
@@ -64,11 +62,11 @@ _Correct: OpenStack Administrators could delegate this task to the OpenShift Adm
 * [ ] Configuring operating system images to boot new server instance VMs. +
 _Incorrect: typical tasks related to managing application workloads belong to OpenStack Operators, no matter they use the Red Hat product or not._
 
-* [x] *Configuring multiple instances of OpenStack services, one active and another passive, using pacemaker or another clustering middleware.* +
-_Correct: Red Hat OpenStack users rely on the high-availability (HA) configurations embedded the product, in the case of Red Hat OpenStack Services on OpenShift, leveraging HA features from Kubernetes._
+* [x] *Configuring multiple instances of OpenStack services, one active and another passive, using a pacemaker or another clustering middleware.* +
+_Correct: Red Hat OpenStack users rely on the high-availability (HA) configurations embedded in the product, in the case of Red Hat OpenStack Services on OpenShift, leveraging HA features from Kubernetes._
 
 * [ ] Installing an operating system on compute nodes, such as RHEL. +
 _Incorrect: Red Hat OpenStack users are still required to provision and configure their compute nodes, but they are required to use RHEL and cannot use any other Linux distribution._
 
 * [x] *Selecting an installation method for OpenStack services on control plane servers, such as from precompiled binaries, operating system packages, or container images.* +
-_Correct: Red Hat OpenStack users rely on the installation methods embedded the product, in the case of Red Hat OpenStack Services on OpenShift, as add-on operators for OpenShift._
+_Correct: Red Hat OpenStack users rely on the installation methods embedded in the product, in the case of Red Hat OpenStack Services on OpenShift, as add-on operators for OpenShift._
