--- a/modules/ch1-intro/pages/s8-summary.adoc
+++ b/modules/ch1-intro/pages/s8-summary.adoc
@@ -10,7 +10,7 @@ In this chapter, you learn:
 
 * OpenStack Operators manage applications running on OpenStack clusters and all its associated virtual resources, while OpenStack administrators manage the OpenStack cluster itself, including its control plane and compute nodes.
 
-* OpenStack Operators manage applications using the OpenStack APIs, by means of the OpenStack client CLI and the OpenStack Horizon web UI. OpenStack Administrators use these same tools, and also manage OpenStack control planes using Kubernetes APIs and OpenShift custom resources, and compute nodes using Ansible.
+* OpenStack Operators manage applications using the OpenStack APIs, by means of the OpenStack client CLI and the OpenStack Horizon web UI. OpenStack Administrators use these same tools and also manage OpenStack control planes using Kubernetes APIs and OpenShift custom resources, and compute nodes using Ansible.
 
 
 
